FEAT layout hero completed

--- a/index.html
+++ b/index.html
@@ -58,12 +58,21 @@
                 <div class="row">
                     <div class="col-2">
                         <div class="card">
-
+                            <div class="card-description">
+                                <h3>Get a demo application</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae tempore explicabo eligendi ullam autem non animi inventore unde velit harum.</p>
+                                <a href="#">App store</a>
+                            </div>
+                            <figure class="phone">
+                                <img src="./img/phone.png" alt="">
+                            </figure>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card">
-
+                            <i class="hero-icon fa-solid fa-file-code"></i>
+                            <h3>Clean code</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam libero ducimus ad suscipit adipisci accusantium placeat dolorem nostrum voluptas ipsam!</p>
                         </div>
                     </div>
                     <div class="col-3">
