FEAT second section added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <div class="card-description">
                                 <h3>Get a demo application</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae tempore explicabo eligendi ullam autem non animi inventore unde velit harum.</p>
-                                <a href="#">App store</a>
+                                <a class="button button--blue" href="#"><i class="apple fa-brands fa-apple"></i>App store</a>
                             </div>
                             <figure class="phone">
                                 <img src="./img/phone.png" alt="">
@@ -77,23 +77,52 @@
                     </div>
                     <div class="col-3">
                         <div class="card">
-
+                            <i class="hero-icon fa-solid fa-compass-drafting"></i>
+                            <h3>Clean code</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam libero ducimus ad suscipit adipisci accusantium placeat dolorem nostrum voluptas ipsam!</p>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card">
-
+                            <i class="hero-icon fa-solid fa-laptop-code"></i>
+                            <h3>Clean code</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam libero ducimus ad suscipit adipisci accusantium placeat dolorem nostrum voluptas ipsam!</p>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card">
-
+                            <i class="hero-icon fa-solid fa-bullhorn"></i>
+                            <h3>Clean code</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam libero ducimus ad suscipit adipisci accusantium placeat dolorem nostrum voluptas ipsam!</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+        <section class="planning">
+            <div class="container--small">
+                <div class="row">
+                    <div class="col-50 strategic">
+                        <figure>
+                            <img class="pla1" src="./img/planning1.png" alt="">
+                        </figure>
+                        <h1>Strategic Planning</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit tempore porro dolores architecto est magnam, alias totam dolorum aspernatur consequatur hic atque voluptatum, recusandae nemo similique et quae nulla omnis? Modi fugiat amet expedita.</p>
+                    </div>
+                    <div class="col-50">
+                        <div class="card--app">
+                            <figure>
+                                <img class="pla2" src="./img/planning2.png" alt="">
+                            </figure>
+                            <h3>App Developement</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio fugiat ullam expedita sit deleniti exercitationem impedit animi.</p>
+                            <a href=""><i class="arrow fa-solid fa-arrow-down-long"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
