FEAT start section testimonial

--- a/index.html
+++ b/index.html
@@ -123,6 +123,28 @@
                 </div>
             </div>
         </section>
+
+        <section class="testimonial">
+            <div class="container">
+                <div class="row">
+                    <div class="col-100">
+                        <div class="card-testimonial">
+                            <figure>
+                                <img src="./img/testimonial1.jpg" alt="">
+                            </figure>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, iste. Aspernatur dolore animi tempore accusantium nobis minus excepturi ipsum autem, harum sunt?</p>
+                            <strong>NAT REYNOLDS</strong> 
+                        </div>
+                    </div>
+                    <div class="col-100">
+
+                    </div>
+                    <div class="col-100">
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
