FEAT testimonial section + responsive completed

--- a/index.html
+++ b/index.html
@@ -126,21 +126,47 @@
 
         <section class="testimonial">
             <div class="container">
+                <div class="testimonial__title">
+                    <p>TESTIMONIALS</p>
+                    <h1>We are committed expert partners</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas adipisci cumque voluptatum sapiente ad magnam ducimus, mollitia recusandae ipsam aliquid odit repudiandae veritatis assumenda laborum? Modi, facilis quidem.</p>
+                </div>
                 <div class="row">
                     <div class="col-100">
                         <div class="card-testimonial">
                             <figure>
                                 <img src="./img/testimonial1.jpg" alt="">
                             </figure>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, iste. Aspernatur dolore animi tempore accusantium nobis minus excepturi ipsum autem, harum sunt?</p>
-                            <strong>NAT REYNOLDS</strong> 
+
+                            <div class="card-testimonial__description">
+                                <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, iste. Aspernatur dolore animi tempore accusantium nobis minus excepturi ipsum autem, harum sunt?"</p>
+                                <h3>NAT REYNOLDS</h3> 
+                            </div>
                         </div>
                     </div>
                     <div class="col-100">
+                        <div class="card-testimonial">
+                            <figure>
+                                <img src="./img/testimonial2.jpg" alt="">
+                            </figure>
 
+                            <div class="card-testimonial__description">
+                                <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, iste. Aspernatur dolore animi tempore accusantium nobis minus excepturi ipsum autem, harum sunt?"</p>
+                                <h3>CELIA ALMENDA</h3> 
+                            </div>
+                        </div>
                     </div>
                     <div class="col-100">
+                        <div class="card-testimonial">
+                            <figure>
+                                <img src="./img/testimonial3.jpg" alt="">
+                            </figure>
 
+                            <div class="card-testimonial__description">
+                                <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, iste. Aspernatur dolore animi tempore accusantium nobis minus excepturi ipsum autem, harum sunt?"</p>
+                                <h3>BOB ROBERTS</h3> 
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
