FEAT layout benefits added

--- a/index.html
+++ b/index.html
@@ -171,6 +171,49 @@
                 </div>
             </div>
         </section>
+
+        <section class="benefits">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <h1>01</h1>
+                        <h2>Hight quality</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti aperiam ab inventore error, aspernatur, excepturi aut vel, nam beatae iste mollitia facere corrupti illo aliquid.</p>
+                        <a class="button button--viola" href="#">more</a>
+                    </div>
+                    <div class="col-6">
+                        <h1>02</h1>
+                        <h2>Creative Team</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti aperiam ab inventore error, aspernatur, excepturi aut vel, nam beatae iste mollitia facere corrupti illo aliquid.</p>
+                        <a class="button button--viola" href="#">more</a>
+                    </div>
+                    <div class="col-6">
+                        <h1>03</h1>
+                        <h2>Amazing Result</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti aperiam ab inventore error, aspernatur, excepturi aut vel, nam beatae iste mollitia facere corrupti illo aliquid.</p>
+                        <a class="button button--viola" href="#">more</a>
+                    </div>
+                    <div class="col-6">
+                        <h1>04</h1>
+                        <h2>Best Pricing</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti aperiam ab inventore error, aspernatur, excepturi aut vel, nam beatae iste mollitia facere corrupti illo aliquid.</p>
+                        <a class="button button--viola" href="#">more</a>
+                    </div>
+                    <div class="col-6">
+                        <h1>05</h1>
+                        <h2>Innovation</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti aperiam ab inventore error, aspernatur, excepturi aut vel, nam beatae iste mollitia facere corrupti illo aliquid.</p>
+                        <a class="button button--viola" href="#">more</a>
+                    </div>
+                    <div class="col-6">
+                        <h1>06</h1>
+                        <h2>24/7 Support</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti aperiam ab inventore error, aspernatur, excepturi aut vel, nam beatae iste mollitia facere corrupti illo aliquid.</p>
+                        <a class="button button--viola" href="#">more</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
