--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
         <section class="benefits">
             <div class="container">
+                <h1 class="benefits__title">Benefits of working with us</h1>
                 <div class="row">
                     <div class="col-6">
                         <h1>01</h1>
