--- a/index.html
+++ b/index.html
@@ -215,6 +215,43 @@
                 </div>
             </div>
         </section>
+
+        <section class="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-70">
+                        <h1>About Us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas maiores dolor harum ex unde similique non, aut eligendi perferendis placeat. Nam reiciendis, nemo inventore asperiores assumenda, perspiciatis, odit vitae enim et in magnam alias velit ut dolorem officiis nulla. A, ipsum! Maiores omnis delectus repudiandae at aut earum tenetur necessitatibus quidem, asperiores eligendi facere harum enim?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque recusandae repellendus minus sapiente esse quae ad ipsa quod itaque quaerat quos dolorum cum, ipsum facilis optio ducimus? Esse asperiores delectus voluptatum vitae minus impedit reiciendis reprehenderit quam unde fugiat. Nobis eligendi, deleniti eum enim magnam sint neque totam delectus iure quaerat.</p>
+                    </div>
+                    <div class="col-30">
+                        <img src="./img/about.jpg" alt="">
+                        <p>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio</p>
+                        <a class="button button--viola2" href="#"><i class="fa-brands fa-linkedin"></i> Find me on Linkedin</a>
+                    </div>  
+                </div>
+            </div>
+        </section>
+
+        <section class="started">
+            <div class="container--small2">
+                <p style="margin-bottom: 25px;" >GET STARTED</p>
+                <h2 style="margin-bottom: 35px; font-size: 42px;">Simple, Trasparent Pricing</h2>
+                <h1 style="margin-bottom: 40px; font-size: 90px; color: #FDC15F;">It's Free!</h1>
+                <div class="container--footer">
+                    <p style="margin-bottom: 38px;">We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls</p>
+                    <a style="margin-bottom: 38px;" class="button--foot" href="#">Get Started</a>
+                    <p>Copyright 2021 Boolean Classe XX Privacy policy</p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container--footer">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur doloremque praesentium labore a expedita, ducimus inventore!</p>
+                <p> <a href="">Lorem ipsum</a> dolor sit amet <a href="">Boolean Careers.</a></p>
+            </div>
+        </footer>
     </main>
 
 </body>
